[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/Win_screen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 43
font_data = ExtResource( 1 )

[node name="won" type="CenterContainer"]
margin_right = 569.0
margin_bottom = 320.0
script = ExtResource( 2 )

[node name="background" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.717647 )
margin_right = 596.0
margin_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 596, 320 )

[node name="container" type="VBoxContainer" parent="."]
margin_left = 195.0
margin_top = 122.0
margin_right = 401.0
margin_bottom = 197.0

[node name="you_won_label" type="Label" parent="container"]
margin_right = 206.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
text = "YOU WON!"
align = 1
valign = 1

[node name="next_button" type="Button" parent="container"]
margin_top = 55.0
margin_right = 206.0
margin_bottom = 75.0
disabled = true
text = "Next level"

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="pressed" from="container/next_button" to="." method="_on_next_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
